--- a/Segundo Año/Laboratorio FS II/proyecto_react/app_react/src/componentes/Calculadora.css
+++ b/Segundo Año/Laboratorio FS II/proyecto_react/app_react/src/componentes/Calculadora.css
@@ -1,10 +1,16 @@
-.campo {
-    align-items: center;
+.espacio {
     display: flex;
-    flex-direction: column;
-
+    justify-content: center;
+    width: 100%;
 }
 
+.campo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 200px;
+    height: 75px;
+}
 input {
     margin: 10px
 }
